# realtime-voice-rag

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  requirements.txt  test_rag.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  document.py  documents.py  websocket.py  websocket_mock.py  websocket_simple.py
backend/app/api/services/: mock_rag_service.py  rag_service.py
backend/app/core/: config.py  rag_manager.py
backend/app/services/: rag_service.py
backend/backend/: app.py  websocket_handler.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  Citations.jsx  DocumentManager.jsx  DocumentUpload.jsx  ErrorBoundary.jsx  VoiceInterface.jsx  VoiceRecorder.jsx
